--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 							<ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
 								<li><a href="#" class="py-2 d-block">Shipping Information</a></li>
 								<li><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
-								<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
+								<li><a href="termsandconditions.html" class="py-2 d-block">Terms &amp; Conditions</a></li>
 								<li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
 							</ul>
 						</div>
