--- a/about.html
+++ b/about.html
@@ -75,8 +75,10 @@
             </div>
           </li>
           <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span
-                class="icon-shopping_cart"></span>[0]</a></li>
+          <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+							<path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
+						</svg></a></li>
         </ul>
       </div>
     </div>
@@ -193,7 +195,7 @@
 
           <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved</a>
+            <script>document.write(new Date().getFullYear());</script> @CVSU-Bacoor</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
